--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,36 +1,16 @@
-# Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
-name: Metrics
 on:
-  # Schedule updates
-  schedule: [{cron: "0 0 1 * *"}]
-  push: {branches: "main"}
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "0 0 * * *"
+
 jobs:
-  github-metrics:
+  devcard:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: devcard
+        uses: dailydotdev/action-devcard@2.0.4
         with:
-          # You'll need to setup a personal token in your secrets.
-          token: ${{ secrets.METRICS_TOKEN }}
-          # GITHUB_TOKEN is a special auto-generated token used for commits
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-
-          # Options
-          user: BaptDu
-          template: classic
-          base: header, activity, community, repositories, metadata
-          
-          config_timezone: Europe/Paris
-          config_padding: 6%
-          
-          plugin_languages: yes
-          
-          plugin_pagespeed_url: https://dumontbaptiste.fr
-          
-          plugin_pagespeed_screenshot: yes
-          
-          plugin_isocalendar: yes
-          
-          plugin_habits: yes
-          plugin_habits_facts: yes
-          plugin_habits_charts: yes
+          devcard_id: ${{ secrets.DEVCARD_ID }}
